--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,19 @@ PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=CpOWiI2qw6wYKrg1y59XDdroNa-oznRh
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+SMTP_HOST=localhost
+SMTP_PORT=587
+SMTP_USERNAME=<username>
+SMTP_PASSWORD=<password>
+MAILGUN_API_KEY=<mailgun-api-key>
+MAILGUN_DOMAIN=<your-domain>
